Дорабатывает обработку ошибок в ручках, меняет ответ сервера (метод DELETE)
