# openapi/openapi.yaml
@@ -85,12 +85,8 @@ paths:
       tags:
         - tasks
       responses:
-        '200':
+        "204":
           description: Task deleted
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/MsgResponse"
         "404":
           description: Task not found
           content:
@@ -179,12 +175,8 @@ paths:
             type: integer
             format: uint
       responses:
-        '200':
+        "204":
           description: User deleted
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/MsgResponse"
         "404":
           description: User not found
           content:
